# microwindows

./: .directory  LICENSE  README  READMEFIRST.html  Readme.md
doc/: .directory  CONTENTS.txt  CREDITS  Doxyfile-internal  EMSCRIPTEN.txt  FLTK on Android application note.html  FONTS.txt  MAKEVARS.txt  NXlib programming and reference manual.html  NXlib programming manual.html  Readme.md  binaries.txt  faq.html  faq2.html  indent.sh  microwindows_architecture.html  mwinapi.html
doc/html/: Debugging Microwindows code with GDB.html  FLTK on Android application note.html  Nano-X_tutorial.html  Win32API.html  faq2.html
doc/nano-X/: .directory  Makefile  index.html  nano-X-docs.ps  nano-X-docs.sgml  nano-X-sections.txt
src/: .gitignore  Arch.org  Arch.rules  BUGS  CONTENTS  CREDITS  ChangeLog  DEMOS.txt  DEPRECATED  Doxyfile-internal  Doxyfile-nanox  FIXME  INSTALL  LICENSE  MAKEVARS.txt  Makefile  Makefile.elks  Makefile.rtems  Makefile.rules  MakefileDOS  Makefile_ajaguar  Makefile_nr  Path.rules  README  README.fonts  ROOZ.txt  TODO  Todo  Version  aggdemo.sh  blitdemo.sh  chess.sh  cleandos.sh  compositedemo.sh  config  crossdos.sh  demo.sh  demo2.sh  demo22.sh  demo4.sh  (+40 more)
src/Configs/: README  config.ads  config.ajaguar  config.allegro  config.allegro-android  config.allegro5  config.android  config.android.allegro  (+57 more)
src/contrib/TinyWidgets/: AUTHORS  COPYING  ChangeLog  INSTALL  Make.rules  Make.rules.in  Makefile  Makefile.in  README  TTD.txt  config.cache  config.guess  config.status  config.sub  configure  configure.in  install-sh  runapp  rundemos.sh  runtnapp  runtndemos.sh  runtndesigner  tndesigner.sh
src/contrib/TinyWidgets/CVS/: Entries  Repository  Root
src/contrib/TinyWidgets/Icons/CVS/: Entries  Repository
src/contrib/TinyWidgets/Icons/extra/: btn.xpm  checkbutton.xpm  combo.xpm  combo1.xpm  label.xpm  lbox.xpm  pbar.xpm  pbar1.xpm  pbtn.xpm  rawwid.xpm  rdbtn.xpm  rdbtngrp.xpm  scrlbar.xpm  slider.xpm  window.xpm
src/contrib/TinyWidgets/demos/: .directory  Makefile  Makefile.in  colorpicker.c  comboboxtest.c  demo1.c  launchtest.c  listboxtest.c  menubartest.c  minesweeper.c  picturetest.c  playlist.c  progresstest.c  radiotest.c  rawwidgettest.c  scrollbartest.c  textboxtest.c
src/contrib/TinyWidgets/demos/CVS/: Entries  Repository
src/contrib/TinyWidgets/demos/extra/: minesweeper.c  test.c
src/contrib/TinyWidgets/doc/: tnw-tut-1.html  tnw-tut-2.html  tnw-tut-3.html  tnw-tut-4.html  tnw-tut-5.html  tnw-tut-6.html  tnw-tut.html  tnw-tut.sgml
src/contrib/TinyWidgets/doc/CVS/: Entries  Repository
src/contrib/TinyWidgets/include/: tnBase.h  tnButton.h  tnCascadeMenu.h  tnCheckButton.h  tnComboBox.h  tnLabel.h  tnListBox.h  tnMenuBar.h  tnMenuItem.h  tnPicture.h  tnPopUpMenu.h  tnProgressBar.h  tnRadioButton.h  tnRadioButtonGroup.h  tnRawWidget.h  tnScrollBar.h  tnTextBox.h  tnWidgets.h  tnWindow.h
src/contrib/TinyWidgets/include/CVS/: Entries  Repository
src/contrib/TinyWidgets/lib/: .keepdir
src/contrib/TinyWidgets/src/: Makefile  Makefile.in  tnButton.c  tnCascadeMenu.c  tnCheckButton.c  tnComboBox.c  tnLabel.c  tnListBox.c  tnMenuBar.c  tnMenuItem.c  tnPicture.c  tnPopUpMenu.c  tnProgressBar.c  tnRadioButton.c  tnRadioButtonGroup.c  tnRawWidget.c  tnScrollBar.c  tnTextBox.c  tnWidgets.c  tnWindow.c
src/contrib/TinyWidgets/src/CVS/: Entries  Repository
src/contrib/TinyWidgets/testdir/: Project.rc
src/contrib/TinyWidgets/tndesigner/: Makefile  Makefile.in  button.c  button.h  c.sh  callback_editor.c  checkbutton.c  checkbutton.h  codegen.c  combobox.c  combobox.h  fileio.l  fileio.y  label.c  label.h  listbox.c  listbox.h  loadsave.c  main.c  main.h  menu_editor.c  picture.c  picture.h  progressbar.c  progressbar.h  property_editor.c  radiobutton.c  radiobutton.h  radiobuttongroup.c  radiobuttongroup.h  rawwidget.c  rawwidget.h  scrollbar.c  scrollbar.h  textbox.c  textbox.h  window.c  window.h
src/contrib/TinyWidgets/tndesigner/CVS/: Entries  Repository
src/contrib/TinyWidgets/tndesigner/demos/: Makefile  Project.rc  callback.c  callback.h  interface.c  main.c
src/contrib/TinyWidgets/tndesigner/demos/CVS/: Entries  Repository
src/contrib/TinyWidgets/tndesigner/demos/calculator/: Makefile  Project.rc  callback.c  callback.h  interface.c  interface.h  main.c  support.c
src/contrib/TinyWidgets/tndesigner/demos/calculator/CVS/: Repository
src/contrib/TinyWidgets/tndesigner/demos/hello/: Makefile  Project.rc  callback.c  callback.h  interface.c  interface.h  main.c  support.c
src/contrib/TinyWidgets/tndesigner/demos/hello/CVS/: Entries  Repository
src/contrib/TinyWidgets/tndesigner/test/: Makefile  Project.rc  callback.c  callback.h  interface.c  main.c  support.c
src/contrib/doom/: Makefile  Makefile.am  Makefile.in  Makefile.sdl  README.SDL  README.nanox  acinclude.m4  aclocal.m4  config.cache  config.status  configure  configure.in  d_main.c  d_net.c  doomdef.h  doomtype.h  f_finale.c  g_game.c  hu_lib.c  i_main.c  i_net.c  i_sound.c  i_sound_sdl.c  i_system.c  i_system.h  i_system_sdl.c  i_video.c  i_video_sdl.c  m_argv.c  m_menu.c  m_misc.c  m_swap.c  m_swap.h  p_setup.c  r_data.c  r_draw.c  s_sound.c  st_lib.c  tables.h  v_video.c  (+4 more)
(+1618 files in other folders)
